log/build_2025-06-02_20-12-05/serial_mpu_reader/stdout_stderr.log
running egg_info
creating ../../build/serial_mpu_reader/serial_mpu_reader.egg-info
writing ../../build/serial_mpu_reader/serial_mpu_reader.egg-info/PKG-INFO
writing dependency_links to ../../build/serial_mpu_reader/serial_mpu_reader.egg-info/dependency_links.txt
writing entry points to ../../build/serial_mpu_reader/serial_mpu_reader.egg-info/entry_points.txt
writing requirements to ../../build/serial_mpu_reader/serial_mpu_reader.egg-info/requires.txt
writing top-level names to ../../build/serial_mpu_reader/serial_mpu_reader.egg-info/top_level.txt
writing manifest file '../../build/serial_mpu_reader/serial_mpu_reader.egg-info/SOURCES.txt'
reading manifest file '../../build/serial_mpu_reader/serial_mpu_reader.egg-info/SOURCES.txt'
writing manifest file '../../build/serial_mpu_reader/serial_mpu_reader.egg-info/SOURCES.txt'
running build
running build_py
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib/serial_mpu_reader
copying serial_mpu_reader/__init__.py -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib/serial_mpu_reader
copying serial_mpu_reader/serial_reader.py -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib/serial_mpu_reader
running install
running install_lib
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader
copying /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib/serial_mpu_reader/__init__.py -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader
copying /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/build/lib/serial_mpu_reader/serial_reader.py -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader
byte-compiling /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader/__init__.py to __init__.cpython-310.pyc
byte-compiling /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader/serial_reader.py to serial_reader.cpython-310.pyc
  File "/mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader/serial_reader.py", line 1
    <LeftMouse>import rclpy
    ^
SyntaxError: invalid syntax

running install_data
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/share/ament_index
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/share/ament_index/resource_index
creating /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/share/ament_index/resource_index/packages
copying resource/serial_mpu_reader -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/share/ament_index/resource_index/packages
copying package.xml -> /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/share/serial_mpu_reader
running install_egg_info
Copying ../../build/serial_mpu_reader/serial_mpu_reader.egg-info to /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/python3.10/site-packages/serial_mpu_reader-0.0.0-py3.10.egg-info
running install_scripts
Installing serial_reader script to /mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/install/serial_mpu_reader/lib/serial_mpu_reader
writing list of installed files to '/mnt/hdd/STM32/STM32Projects/BlackPillCDC/BlackPillCDC_RvizVisualization/build/serial_mpu_reader/install.log'
